<resources>
    <string name="app_name">Calculator project</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="sqrt">Sqrt.</string>
    <string name="del">Del.</string>
    <string name="num2">Enter second number</string>
    <string name="num1">Enter first number</string>
    <string name="result">Result</string>

</resources>