<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#673AB7"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Calculator"
        app:titleTextColor="#0D0D0D" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/num1input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/num1"
                android:inputType="number|numberDecimal|numberSigned"
                app:layout_constraintEnd_toStartOf="@+id/buttonDel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del"
                app:layout_constraintBottom_toBottomOf="@id/num1input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/num1input" />

            <!-- Result View -->
            <EditText
                android:id="@+id/num2input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/num2"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintEnd_toStartOf="@+id/buttonDel"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/num1input" />

            <TextView
                android:id="@+id/resultView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/result"
                android:textSize="20sp"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/num2input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Basic Operators Grid -->
            <LinearLayout
                android:id="@+id/basicOperatorsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/resultView">

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/buttonSub"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/minus" />

                <Button
                    android:id="@+id/buttonMul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/multiply" />

                <Button
                    android:id="@+id/buttonDiv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/divide" />
            </LinearLayout>

            <!-- Scientific Operators Grid -->

            <!-- History List -->
            <GridLayout
                android:id="@+id/scientificOperatorsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:columnCount="3"
                android:rowCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/basicOperatorsLayout">

                <Button
                    android:id="@+id/buttonSin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:text="@string/sin" />

                <Button
                    android:id="@+id/buttonCos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:text="@string/cos" />

                <Button
                    android:id="@+id/buttonTan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:text="@string/tan" />

                <Button
                    android:id="@+id/buttonLog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:text="@string/log" />

                <Button
                    android:id="@+id/buttonSqrt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:text="@string/sqrt" />
            </GridLayout>

            <ListView
                android:id="@+id/historyList"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/scientificOperatorsLayout"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>